--- a/src/app.html
+++ b/src/app.html
@@ -3,10 +3,22 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet"> 
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
 	<body>
 		<div>%sveltekit.body%</div>
 	</body>
+
+	<style>
+		* {
+			font-family: 'Roboto';
+			padding: 0;
+			margin: 0;
+			border: 0;
+		}
+	</style>
 </html>
